# BetterClockSystem

./: .gitignore  README.md
client/: .client_runtime_cache.py  README.md  SIMPLE_TIME_CLIENT_GUIDE.md  base_time_ui_client.py  client.py  font_loader_production_ui.py
python/: pyproject.toml  test.py
python/betterclock_time/: __init__.py
server/: Cargo.toml  openapi.yaml
server/src/: api.rs  main.rs
server/src/alarm/: model.rs  scheduler.rs
server/tests/: cli.rs
